tests/ui/resolve/field-and-method-in-self-not-available-in-assoc-fn.stderr
error[E0425]: cannot find value `field` in this scope
  --> $DIR/field-and-method-in-self-not-available-in-assoc-fn.rs:11:9
   |
LL |     field: u32,
   |     ----- a field by that name exists in `Self`
...
LL |     fn field(&self) -> u32 {
   |        ----- a method by that name is available on `Self` here
...
LL |         field;
   |         ^^^^^

error[E0425]: cannot find value `field` in this scope
  --> $DIR/field-and-method-in-self-not-available-in-assoc-fn.rs:12:15
   |
LL |     field: u32,
   |     ----- a field by that name exists in `Self`
...
LL |     fn field(&self) -> u32 {
   |        ----- a method by that name is available on `Self` here
...
LL |         Foo { field }
   |               ^^^^^

error[E0425]: cannot find value `field` in this scope
  --> $DIR/field-and-method-in-self-not-available-in-assoc-fn.rs:15:15
   |
LL |     fn field(&self) -> u32 {
   |        ----- a method by that name is available on `Self` here
...
LL |         Foo { field }
   |               ^^^^^
   |
help: you might have meant to use the available field
   |
LL |         Foo { field: self.field }
   |               ++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
